[tool.poetry]
name = "hdmix"
version = "0.1.0"
description = ""
authors = ["TomFLN <tom@fabmail.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^3.0.0"
nclib = "^1.0.5"
importlib-metadata = "^8.4.0"


[tool.poetry.group.dev.dependencies]
ipdb = "^0.13.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
